test/valid/66358_semicolon_right/semicolon_right.mag
-- Author: 66358, Gustavo Cardoso

fun f (_) : Unit -> Int =
  var x : Int = 4;
  5
fun main (_) : Unit -> Unit = print(f(unit))