test/invalid-semantics/66358_invalid_projection/invalid_projection.mag
-- Author: 66358, Gustavo Cardoso

fun main (_) : Unit -> Unit = 5.x